# timeline_kun

./: .gitignore  README.md  app.version  build.bat  pyproject.toml  timeline_kun.code-workspace
.github/workflows/: ci.yml
docs/: README.md  _config.yml  test_evidence_gopro.md  timeline_csv_format.md  timeline_kun_and_llm.md
schemas/: timeline_kun_csv.schema.json
scripts/: launch_previewer.py  launch_timer.py
src/: app_previewer.py  app_timer.py  csv_to_timetable.py  gui_canvas.py  gui_tree.py  icon_data.py  sound.py  svg_writer.py  time_format.py  timer_log.py
src/timeline_kun/: app_previewer.py  app_timer.py  ble_control.py  ble_devices.toml  ble_devices.txt  config.toml  csv_to_timetable.py  events_json.py  file_loader.py  gui_ble_button.py  gui_tree.py  time_format.py  timer_log.py  trigger.py
src/tokei_kun/: __init__.py
tests/: README.md  test_app_timer.py  test_file_loader.py  test_smoke.py  test_time_format.py
tests/fixtures/: conflict_rows.csv  invalid__duration_zero.csv  invalid__encoding__unsupported.csv  invalid__fixed__unsupported_code.csv  invalid__last_row__cannot_infer_end_time.csv  invalid__quoted_fields.csv  ja_utf8.csv  no_duration.csv  no_start.csv  recording_2.csv  ssrn_exp1.csv  ssrn_exp2.csv  valid__crlf.csv  valid__empty_lines__ignored.csv  valid__encoding__shift_jis.csv  valid__encoding__utf8_bom.csv  valid__header_only.csv  valid__quoted_fields.csv  valid__recording__example_1.csv  valid__recording__example_3hour.csv  valid__ssrn__exp3.csv  valid__time_format__mmss.csv  valid__with_end_column.csv  (+2 more)
