[project]
name = "timeline-kun"
version = "0.3.0"
description = "An integrated graphical interface tool for planning and executing experimental protocols."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "soundfile>=0.13.1",
    "sounddevice>=0.5.1",
    "ttkthemes>=3.2.2",
]

[tool.uv]
dev-dependencies =[
    "pyinstaller>=6.11.0",
    "pyinstaller-versionfile>=2.1",
]
